--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
     ],
     "browser_action": {
         "default_icon": "icon.png",
-        "default_title": "How Much Do I Google"
+        "default_title": "How Much Do I Google",
+        "default_popup": "popup.html"
     }
 }
